<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_cal"
            android:id="@+id/text1"
            android:textSize="30sp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expression"
            android:layout_marginTop="30dp"
            android:id="@+id/expression"
            android:textSize="30sp"/>
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:rowCount="4"
            android:columnCount="4">
        <Button
                android:text="1"
                android:id="@+id/btn1"
                android:onClick="press1"/>
        <Button
                android:text="2"
                android:id="@+id/btn2"
                android:onClick="press2"/>
        <Button
                android:text="3"
                android:id="@+id/btn3"
                android:onClick="press3"/>
        <Button
                android:text="+"
                android:id="@+id/btnadd"
                android:onClick="pressAdd"/>
        <Button
                android:text="4"
                android:id="@+id/btn4"
                android:onClick="press4"/>
        <Button
                android:text="5"
                android:id="@+id/btn5"
                android:onClick="press5"/>
        <Button
                android:text="6"
                android:id="@+id/btn6"
                android:onClick="press6"/>
        <Button
                android:text="-"
                android:id="@+id/btnsub"
                android:onClick="pressSub"/>
        <Button
                android:text="7"
                android:id="@+id/btn7"
                android:onClick="press7"/>
        <Button
                android:text="8"
                android:id="@+id/btn8"
                android:onClick="press8"/>
        <Button
                android:text="9"
                android:id="@+id/btn9"
                android:onClick="press9"/>
        <Button
                android:text="×"
                android:id="@+id/btnmul"
                android:onClick="pressMul"/>
        <Button
                android:text="C"
                android:id="@+id/btnclear"
                android:onClick="pressClear"/>
        <Button
                android:text="0"
                android:id="@+id/btn0"
                android:onClick="press0"/>
        <Button
                android:text="."
                android:id="@+id/btnpoi"
                android:onClick="pressPoint"/>
        <Button
                android:text="÷"
                android:id="@+id/btndiv"
                android:onClick="pressDiv"/>
    </GridLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="clickCal"
            android:layout_marginTop="30dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="clickSubmit"
            android:layout_marginTop="30dp"/>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>