<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                android:textSize="30sp"
                android:id="@+id/express1"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/uname"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:id="@+id/uname"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/passwd"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:id="@+id/pass"
                    android:layout_height="wrap_content"
            />
        </LinearLayout>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>